--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fitapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://your-username.github.io/fitapp",
+  "homepage": "https://bhoretskyi.github.io/fitapp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
